# algobot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
algobot/: logsetup.py  main.py
algobot/bot/: __init__.py
algobot/bot/filters/: access.py
algobot/bot/handlers/: __init__.py  feature.py  register.py  reload.py  tasks.py  toggle.py
algobot/bot/handlers/special/: cancel.py  debug.py  error.py
algobot/bot/middleware/: enabler.py  tg_updater.py  user_data.py
algobot/common/: config.py  feedback.py
algobot/config/: __init__.py
algobot/data/connectors/: courses.py  students.py  tables.py  transfers.py  users.py
algobot/data/courses/: courses.py
algobot/data/db/: students.py  users.py
algobot/data/helpers/: defaults.py  formatters.py  text_views.py
algobot/data/users/: students.py  transfers.py  users.py
algobot/db/: mapping.py  registry.py
algobot/drivers/google/: __init__.py  sheets.py
algobot/drivers/sqlite/: __init__.py  models.py
algobot/telegram/: bot.py
algobot/telegram/filters/: admin.py
algobot/telegram/validation/: validation.py
algobot/utils/: dict_propagator.py  keyborad_sqrt.py
config/: config.public.json5
resources/: conf.yaml.pub  config.schema.json5  credentials.json.pub  sheet-template.schema.json5
resources/sheets/templates/: algo-y2022.json5  default-6.json5  default-7.json5
